--- a/BiblioApi/src/main/resources/application.properties
+++ b/BiblioApi/src/main/resources/application.properties
@@ -3,6 +3,19 @@ spring.mvc.view.suffix= .jsp
 spring.messages.basename=validation
 
 
+#spring.datasource.url=jdbc:sqlserver://localhost:1433;database=biblio
+#spring.datasource.username=sa
+#spring.datasource.password=MyStrongPassword@
+#spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.jpa.show-sql=true
+
+#spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+#spring.jpa.hibernate.ddl-auto = none
+#spring.jpa.properties.hibernate.format_sql=true
+#logging.level.org.hibernate.SQL=DEBUG
+#spring.datasource.initialization-mode=always
+
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 #
 jwt.signing.key.secret=mySecret
