--- a/BiblioUi/angular.json
+++ b/BiblioUi/angular.json
@@ -51,6 +51,7 @@
             ],
             "styles": [
               "node_modules/bulma/css/bulma.min.css",
+              "node_modules/font-awesome/css/font-awesome.css",
               "src/styles.scss"
             ],
             "scripts": []
