--- a/BiblioUi/package.json
+++ b/BiblioUi/package.json
@@ -20,7 +20,7 @@
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
     "bulma": "^0.8.2",
-    "ngx-restangular": "^5.0.0",
+    "font-awesome": "^4.7.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
